--- a/templates/be/includes/header.html
+++ b/templates/be/includes/header.html
@@ -1398,57 +1398,10 @@
                 <div class="menu-item px-5">
                     <a href="{% url 'userEdit' user.pk %}" class="menu-link px-5">Edit Profile</a>
                 </div>
-                <!--end::Menu item-->
-                <!--begin::Menu item-->
                 <div class="menu-item px-5">
-                    <a href="#" class="menu-link px-5">
-                        <span class="menu-text">My Projects</span>
-                        <span class="menu-badge">
-                            <span class="badge badge-light-danger badge-circle fw-bold fs-7">3</span>
-                        </span>
-                    </a>
-                </div>
-                <div class="menu-item px-5" data-kt-menu-trigger="{default: 'click', lg: 'hover'}"
-                     data-kt-menu-placement="left-start" data-kt-menu-offset="-15px, 0">
-                    <a href="#" class="menu-link px-5">
-                        <span class="menu-title">My Subscription</span>
-                        <span class="menu-arrow"></span>
-                    </a>
-                    <div class="menu-sub menu-sub-dropdown w-175px py-4">
-                        <div class="menu-item px-3">
-                            <a href="#" class="menu-link px-5">Referrals</a>
-                        </div>
-                        <div class="menu-item px-3">
-                            <a href="#" class="menu-link px-5">Billing</a>
-                        </div>
-                        <div class="menu-item px-3">
-                            <a href="#" class="menu-link px-5">Payments</a>
-                        </div>
-                        <div class="menu-item px-3">
-                            <a href="#" class="menu-link d-flex flex-stack px-5">Statements
-                                <i class="fas fa-exclamation-circle ms-2 fs-7" data-bs-toggle="tooltip"
-                                   title="View your statements"></i></a>
-                        </div>
-                        <div class="separator my-2"></div>
-                        <div class="menu-item px-3">
-                            <div class="menu-content px-3">
-                                <label class="form-check form-switch form-check-custom form-check-solid">
-                                    <input class="form-check-input w-30px h-20px" type="checkbox" value="1"
-                                           checked="checked"
-                                           name="notifications"/>
-                                    <span class="form-check-label text-muted fs-7">Notifications</span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-item px-5">
-                    <a href="#" class="menu-link px-5">My Statements</a>
+                    <a href="#" class="menu-link px-5">Change Password</a>
                 </div>
                 <div class="separator my-2"></div>
-                <div class="menu-item px-5 my-1">
-                    <a href="#" class="menu-link px-5">Account Settings</a>
-                </div>
                 <div class="menu-item px-5">
                     <a href="{% url 'logout' %}" class="menu-link px-5">Sign Out</a>
                 </div>
